<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/roundblack">

    <TextView
        style="@style/ViewTheme"
        android:id="@+id/whoareyou"
        android:layout_margin="@dimen/smalldp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/asking_user"
        android:clickable="false"
        android:text="@string/who_are_you" />

    <TextView
        style="@style/ViewTheme"
        android:id="@+id/whatismac"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:contentDescription="@string/explain_metawear"
        android:clickable="false"
        android:text="@string/where_to_get_address"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            style="@style/ViewTheme"
            android:id="@+id/user_name"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:contentDescription="@string/user_input_for_their_name"
            android:clickable="true"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            style="@style/ViewTheme"
            android:id="@+id/user_metawear"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:contentDescription="@string/input_for_address"
            android:clickable="true"
            android:inputType="text"
            android:visibility="gone">

            <requestFocus />
        </EditText>

        <Button
            style="@style/ViewTheme"
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/update_button"
            android:background="@drawable/roundbutton"
            android:clickable="true"
            android:contentDescription="@string/button_to_give_name"
            android:layout_weight="2"/>

        <Button
            style="@style/ViewTheme"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/update_button"
            android:background="@drawable/roundbutton"
            android:clickable="true"
            android:contentDescription="@string/confirm_button"
            android:visibility="gone"
            android:layout_weight="2" />

        <Button
            android:id="@+id/buttonstart"
            style="@style/ViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:clickable="true"
            android:visibility="gone"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>